Obtaining Ember.js and Dependencies

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </ul>
 
           <button id="clear-completed">
-            Clear completed (1)
+            Clear completed (11)
           </button>
         </footer>
     </section>
@@ -56,6 +56,11 @@
     <footer id="info">
       <p>Double-click to edit a todo</p>
     </footer>
+
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="js/libs/handlebars.js"></script>
+    <script src="js/libs/ember.js"></script>
+    <script src="js/libs/ember-data.js"></script>
   </body>
 </html>
 
