--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,61 +6,69 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section id="todoapp">
-      <header id="header">
-        <h1>todos</h1>
-        <input type="text" id="new-todo" placeholder="What needs to be done?" />
-      </header>
+  
+    <script type="text/x-handlebars" data-template-name="todos">
 
-        <section id="main">
-          <ul id="todo-list">
-            <li class="completed">
-              <input type="checkbox" class="toggle">
-              <label>Learn Ember.js</label><button class="destroy"></button>
-            </li>
-            <li>
-              <input type="checkbox" class="toggle">
-              <label>...</label><button class="destroy"></button>
-            </li>
-            <li>
-              <input type="checkbox" class="toggle">
-              <label>Profit!</label><button class="destroy"></button>
-            </li>
-          </ul>
+		<section id="todoapp">
+		  <header id="header">
+			<h1>todos</h1>
+			<input type="text" id="new-todo" placeholder="What needs to be done?" />
+		  </header>
 
-          <input type="checkbox" id="toggle-all">
-        </section>
+			<section id="main">
+			  <ul id="todo-list">
+				<li class="completed">
+				  <input type="checkbox" class="toggle">
+				  <label>Learn Ember.js</label><button class="destroy"></button>
+				</li>
+				<li>
+				  <input type="checkbox" class="toggle">
+				  <label>...</label><button class="destroy"></button>
+				</li>
+				<li>
+				  <input type="checkbox" class="toggle">
+				  <label>Profit!</label><button class="destroy"></button>
+				</li>
+			  </ul>
 
-        <footer id="footer">
-          <span id="todo-count">
-            <strong>2</strong> todos left
-          </span>
-          <ul id="filters">
-            <li>
-              <a href="all" class="selected">All</a>
-            </li>
-            <li>
-              <a href="active">Active</a>
-            </li>
-            <li>
-              <a href="completed">Completed</a>
-            </li>
-          </ul>
+			  <input type="checkbox" id="toggle-all">
+			</section>
 
-          <button id="clear-completed">
-            Clear completed (11)
-          </button>
-        </footer>
-    </section>
+			<footer id="footer">
+			  <span id="todo-count">
+				<strong>2</strong> todos left
+			  </span>
+			  <ul id="filters">
+				<li>
+				  <a href="all" class="selected">All</a>
+				</li>
+				<li>
+				  <a href="active">Active</a>
+				</li>
+				<li>
+				  <a href="completed">Completed</a>
+				</li>
+			  </ul>
 
-    <footer id="info">
-      <p>Double-click to edit a todo</p>
-    </footer>
+			  <button id="clear-completed">
+				Clear completed (11)
+			  </button>
+			</footer>
+		</section>
+
+		<footer id="info">
+		  <p>Double-click to edit a todo</p>
+		</footer>
+	
+	</script>
 
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/handlebars.js"></script>
     <script src="js/libs/ember.js"></script>
     <script src="js/libs/ember-data.js"></script>
+	
+	<script src="js/app/app.js"></script>
+    <script src="js/app/router.js"></script>
   </body>
 </html>
 
