Modeling Your Data

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 	
 	<script src="js/app/app.js"></script>
     <script src="js/app/router.js"></script>
+	
+	<script src="js/app/models/store.js"></script>
+    <script src="js/app/models/todo.js"></script>
   </body>
 </html>
 
