--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section id="todoapp">
           <header id="header">
             <h1>todos</h1>
-            <input type="text" id="new-todo" placeholder="What needs to be done?" />
+            {{view Ember.TextField id="new-todo" placeholder="What needs to be done?" valueBinding="newTitle" action="createTodo"}}
           </header>
 
             <section id="main">
@@ -66,6 +66,8 @@
     
     <script src="js/app/models/store.js"></script>
     <script src="js/app/models/todo.js"></script>
+	
+	<script src="js/app/controllers/todos.js"></script>
   </body>
 </html>
 
