--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
             <section id="main">
                 <ul id="todo-list">
-                    {{#each controller}}
-                        <li {{bindAttr class="isCompleted:completed"}}>
-                            <input type="checkbox" class="toggle">
-                            <label>{{title}}</label><button class="destroy"></button>
-                        </li>
-                    {{/each}}
+                    {{#each controller itemController="todo"}}
+					  <li {{bindAttr class="isCompleted:completed"}}>
+						{{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
+						<label>{{title}}</label><button class="destroy"></button>
+					  </li>
+					{{/each}}
                 </ul>
 
               <input type="checkbox" id="toggle-all">
@@ -67,6 +67,7 @@
     <script src="js/app/models/store.js"></script>
     <script src="js/app/models/todo.js"></script>
 	
+	<script src="js/app/controllers/todo.js"></script>
 	<script src="js/app/controllers/todos.js"></script>
   </body>
 </html>
