--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 </span>
               <ul id="filters">
                 <li>
-                  <a href="all" class="selected">All</a>
+                  {{#linkTo 'todos.index' activeClass="selected"}}All{{/linkTo}}
                 </li>
                 <li>
-                  <a href="active">Active</a>
+                    {{#linkTo 'todos.active' activeClass="selected"}}Active{{/linkTo}}
                 </li>
                 <li>
                   <a href="completed">Completed</a>
