--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <body>
   
     <script type="text/x-handlebars" data-template-name="todos/index">
-		<ul id="todo-list">
-			  {{#each controller itemController="todo"}}
-					<li {{bindAttr class="isCompleted:completed isEditing:editing"}}>
-						  {{#if isEditing}}
-								{{view App.EditTodoView valueBinding="title"}}
-						  {{else}}
-								{{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
-								<label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
-								<button {{action "removeTodo"}} class="destroy"></button>
-						  {{/if}}
-					</li>
-			  {{/each}}
-		</ul>
-	</script>
+        <ul id="todo-list">
+              {{#each controller itemController="todo"}}
+                    <li {{bindAttr class="isCompleted:completed isEditing:editing"}}>
+                          {{#if isEditing}}
+                                {{view App.EditTodoView valueBinding="title"}}
+                          {{else}}
+                                {{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
+                                <label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
+                                <button {{action "removeTodo"}} class="destroy"></button>
+                          {{/if}}
+                    </li>
+              {{/each}}
+        </ul>
+    </script>
   
     <script type="text/x-handlebars" data-template-name="todos">
 
@@ -53,9 +53,11 @@
                 </li>
               </ul>
 
-              <button id="clear-completed">
-                Clear completed (11)
-              </button>
+              {{#if hasCompleted}}
+                <button id="clear-completed" {{action "clearCompleted"}}>
+                    Clear completed ({{completed}})
+                </button>
+              {{/if}}
             </footer>
         </section>
 
@@ -79,7 +81,7 @@
     <script src="js/app/controllers/todo.js"></script>
     <script src="js/app/controllers/todos.js"></script>
 
-	<script src="js/app/views/edit_todo.js"></script>
+    <script src="js/app/views/edit_todo.js"></script>
   </body>
 </html>
 
