Replacing the Fixture Adapter with Another Adapter
Localstorage added, but not used. Causes a bug regarding the isCompleted
property.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <script src="js/libs/handlebars.js"></script>
     <script src="js/libs/ember.js"></script>
     <script src="js/libs/ember-data.js"></script>
+	<script src="js/libs/localstorage_adapter.js"></script>
     
     <script src="js/app/app.js"></script>
     <script src="js/app/router.js"></script>
@@ -84,4 +85,3 @@
     <script src="js/app/views/edit_todo.js"></script>
   </body>
 </html>
-
